Changelog
=========


1.6.7 (unreleased)
------------------

- Fix: ftw.testbrowser compatibility. [mathias.leimgruber]
- Set focus on active element on the tab navs [Kevin Bieri]
- Make possible to close the navigation using Escape key [Kevin Bieri]
- Skip links in the mobile menu when it's closed [Kevin Bieri]
- Fix icon size for IE11 in mobile navigation [Kevin Bieri]
- Fix offset of overlay in IE11 and Edge [Kevin Bieri]
- Introduce swipe gesture for closing the mobile menu. [Kevin Bieri]


1.6.6 (2017-02-16)
------------------

- Fix mobile menu transition on IE>=9.
  [Kevin Bieri]


1.6.5 (2017-01-18)
------------------

- Set the `children_loaded` flag on prepended nodes too.
  [mathias.leimgruber]

- Append current context path to `prepend_unauthorized_parents`, because the current obj may
  be excluded from nav.
  [mathias.leimgruber]


1.6.4 (2016-12-01)
------------------

- Do not detach script tags of type x-handlebars-template. jQuery is not able to re-attach them.
  [mathias.leimgruber]


1.6.3 (2016-11-25)
------------------

- Close the mobile-navigation when the screen size changes from mobile
  to desktop while the navigation is open.
  [raphael-s]


1.6.2 (2016-11-09)
------------------

- Actually mark external links with a "external-link" class in navtree.
  [mathias.leimgruber]


1.6.1 (2016-11-08)
------------------

- Toggle aria-hidden attribute on mobile navigation elements
  [raphael-s]


1.6.0 (2016-11-07)
------------------

- Add various JavaScript events for convenience. [jone]


1.5.1 (2016-10-20)
------------------

- Hide current path on root when showing one level. [jone]

- Fix invalid markup in template, causing broken markup with chameleon. [jone]


1.5.0 (2016-10-17)
------------------

- Mobile buttons: add settings "show_tabs" and "show_two_levels_on_root". [jone]

- Pass the url of the navigation root to the handlebars template.
  [mbaechtold]

- Use helper text for screenreaders also as title attribute on the link itself.